changed image on app

--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,7 @@
         <!-- Sidebar  -->
         <nav id="sidebar">
             <div class="sidebar-header">
+                    <img src="../res/ffxivauctioneer.png"/>
                 <h3>FF XIV Auctioneer</h3>
             </div>
 
