--- a/src/index.html
+++ b/src/index.html
@@ -242,9 +242,11 @@
 
                 var historyData = [];
                 var timestampData = [];
-                itemInfo[i].History.concat(itemInfo[i].Prices);
+                itemInfo[i].Prices.sort((a, b) => (a.Added > b.Added) ? 1 : -1) 
                 itemInfo[i].History.sort((a, b) => (a.Added > b.Added) ? 1 : -1)
-                itemInfo[i].History.forEach(function(element){
+
+                var finalData = itemInfo[i].History.concat(itemInfo[i].Prices);
+                finalData.forEach(function(element){
                     historyData.push(element.PricePerUnit);
                     timestampData.push(new Date(element.Added * 1000).toLocaleString());
                 });
