--- a/src/index.html
+++ b/src/index.html
@@ -30,8 +30,8 @@
         <!-- Sidebar  -->
         <nav id="sidebar">
             <div class="sidebar-header">
-                    <img src="../res/ffxivauctioneer.png"/>
-                <h3>FF XIV Auctioneer</h3>
+                    <img class="logo" src="../res/ffxivauctioneer2.png"/>
+                <h4>FF XIV Auctioneer</h>
             </div>
 
             <ul class="list-unstyled components">
