--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,14 @@
             </nav>
             <div class="items-details">
 
-                    <div class="line"></div>
+                    <div class="line">
+                        
+                    </div>
+                    <div class="form-inline mr-auto">
+                        <input id="searchVal" class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+                        <button id="btnSearch" class="btn btn-dark" type="button">Search</button>
+                    </div>
+                      <div class="line"></div>
                     <h2 class="categoryTitle"></h2>
                     <div class="container row">
                         <div class="col col-lg-3">
@@ -68,7 +75,7 @@
                                 </tbody>
                             </table>
                         </div>
-                        <div class="col-md-9 elfamosochart">
+                        <div class="col col-lg-9 elfamosochart">
                                 
                             </div>
                     </div>
