--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
                         
                     </div>
                     <div class="form-inline mr-auto">
-                        <input id="searchVal" class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+                        <input id="searchVal" class="form-control mr-sm-2" type="text" placeholder="search an item ..." aria-label="Search">
                         <button id="btnSearch" class="btn btn-dark" type="button">Search</button>
                     </div>
                       <div class="line"></div>
